Salesforce/main/default/main/default/objects/CRM_Calendario_de_Eventos__c/fields/Actividade__c.field-meta.xml
<CustomField>
    <fullName>Actividade__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id,TEXT(Evento__c) + &quot; &quot; + Cuenta__r.Name)</formula>
    <label>Actividade</label>
    <type>Text</type>
</CustomField>