Salesforce/main/default/main/default/objects/CRM_Calendario_de_Eventos__c/fields/Arquivos_cont__c.field-meta.xml
<CustomField>
    <fullName>Arquivos_cont__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Qde. Arquivos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>