Salesforce/main/default/main/default/objects/CRM_Calendario_de_Eventos__c/fields/Cidade_Longitud__c.field-meta.xml
<CustomField>
    <fullName>Cidade_Longitud__c</fullName>
    <formula>TEXT(Municipio__r.GeoPosicion__Longitude__s)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cidade Longitud</label>
    <type>Text</type>
</CustomField>