Salesforce/main/default/main/default/objects/CRM_Calendario_de_Eventos__c/fields/CNPJ_CPF_Revenda__c.field-meta.xml
<CustomField>
    <fullName>CNPJ_CPF_Revenda__c</fullName>
    <label>CNPJ/CPF Revenda</label>
    <length>20</length>
    <type>Text</type>
</CustomField>