Salesforce/main/default/main/default/objects/CRM_Calendario_de_Eventos__c/fields/Data_e_horario_inicio__c.field-meta.xml
<CustomField>
    <fullName>Data_e_horario_inicio__c</fullName>
    <label>Data e horario inicio</label>
    <type>DateTime</type>
</CustomField>