Salesforce/main/default/main/default/objects/CRM_Calendario_de_Eventos__c/fields/Direccion__c.field-meta.xml
<CustomField>
    <fullName>Direccion__c</fullName>
    <label>Endereço</label>
    <length>80</length>
    <type>Text</type>
</CustomField>