Salesforce/main/default/main/default/objects/CRM_Calendario_de_Eventos__c/fields/Geocod__c.field-meta.xml
<CustomField>
    <fullName>Geocod__c</fullName>
    <formula>Municipio__r.GeoCod_municipio__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Geocod</label>
    <type>Text</type>
</CustomField>