Salesforce/main/default/main/default/objects/CRM_Calendario_de_Eventos__c/fields/Georeferencia_Text__c.field-meta.xml
<CustomField>
    <fullName>Georeferencia_Text__c</fullName>
    <label>Georeferencia</label>
    <length>100</length>
    <type>Text</type>
</CustomField>