Salesforce/main/default/main/default/objects/CRM_Calendario_de_Eventos__c/fields/Horario__c.field-meta.xml
<CustomField>
    <fullName>Horario__c</fullName>
    <label>Horario</label>
    <length>5</length>
    <type>Text</type>
</CustomField>