Salesforce/main/default/main/default/objects/CRM_Calendario_de_Eventos__c/fields/Latitud_dimension__c.field-meta.xml
<CustomField>
    <fullName>Latitud_dimension__c</fullName>
    <description>Se utiliza como dimensión en modelos de SAP BO Cloud</description>
    <formula>TRIM(TEXT(Latitud__c))</formula>
    <label>Latitud_dimension</label>
    <type>Text</type>
</CustomField>