Salesforce/main/default/main/default/objects/CRM_Calendario_de_Eventos__c/fields/Link_CRM_Evento__c.field-meta.xml
<CustomField>
    <fullName>Link_CRM_Evento__c</fullName>
    <formula>Substitute(left($Api.Enterprise_Server_URL_25 , FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_25, 9)),&quot;-api&quot;,&quot;&quot;)&amp;&quot;apex/CRM_Calendario_Ver_Edit?editCal=&quot;&amp;Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link CRM Evento</label>
    <type>Text</type>
</CustomField>