Salesforce/main/default/main/default/objects/CRM_Calendario_de_Eventos__c/fields/Link_Evento_LE__c.field-meta.xml
<CustomField>
    <fullName>Link_Evento_LE__c</fullName>
    <formula>&quot;https://na57.lightning.force.com/lightning/r/CRM_Calendario_de_Eventos__c/&quot; + Id + &quot;/view&quot;</formula>
    <label>Link Evento LE</label>
    <type>Text</type>
</CustomField>