Salesforce/main/default/main/default/objects/CRM_Calendario_de_Eventos__c/fields/Longitud__c.field-meta.xml
<CustomField>
    <fullName>Longitud__c</fullName>
    <label>Longitude</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>