Salesforce/main/default/main/default/objects/CRM_Calendario_de_Eventos__c/fields/Longitude_Dispositivo__c.field-meta.xml
<CustomField>
    <fullName>Longitude_Dispositivo__c</fullName>
    <label>Longitude Dispositivo</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>