Salesforce/main/default/main/default/objects/CRM_Calendario_de_Eventos__c/fields/Longuitud_dimension__c.field-meta.xml
<CustomField>
    <fullName>Longuitud_dimension__c</fullName>
    <formula>TRIM(TEXT(Longitud__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Longuitud_dimension</label>
    <type>Text</type>
</CustomField>