Salesforce/main/default/main/default/objects/CRM_Calendario_de_Eventos__c/fields/Mapa_do_evento__c.field-meta.xml
<CustomField>
    <fullName>Mapa_do_evento__c</fullName>
    <description>Dynamic link to google maps</description>
    <formula>HYPERLINK(&quot;https://www.google.com/maps/search/?api=1&amp;query=&quot; &amp; SUBSTITUTE(TEXT( Latitud__c ), &quot;,&quot;, &quot;.&quot;) &amp; SUBSTITUTE(TEXT( Longitud__c), &quot;,&quot;, &quot;.&quot;),&quot;Link to map&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mapa do evento</label>
    <type>Text</type>
</CustomField>