Salesforce/main/default/main/default/objects/CRM_Calendario_de_Eventos__c/fields/Nome_Cidade__c.field-meta.xml
<CustomField>
    <fullName>Nome_Cidade__c</fullName>
    <formula>Municipio__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome Cidade</label>
    <type>Text</type>
</CustomField>