Salesforce/main/default/main/default/objects/CRM_Calendario_de_Eventos__c/fields/Nome_do_agricultor_2__c.field-meta.xml
<CustomField>
    <fullName>Nome_do_agricultor_2__c</fullName>
    <description>Nome do agricultor informado no portal</description>
    <inlineHelpText>Nome do agricultor informado no portal</inlineHelpText>
    <label>Nome do agricultor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>