Salesforce/main/default/main/default/objects/CRM_Calendario_de_Eventos__c/fields/Nome_do_agricultor__c.field-meta.xml
<CustomField>
    <fullName>Nome_do_agricultor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Objeto relacionado a um Contato</description>
    <inlineHelpText>Objeto relacionado a um Contato (fora de uso)</inlineHelpText>
    <label>Nome do agricultor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Eventos</relationshipLabel>
    <relationshipName>CRM_Calend_rio_de_eventos</relationshipName>
    <type>Lookup</type>
</CustomField>