Salesforce/main/default/main/default/objects/CRM_Calendario_de_Eventos__c/fields/Numero_de_participantess__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_participantess__c</fullName>
    <label>Número de participantes</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>