Salesforce/main/default/main/default/objects/CRM_Calendario_de_Eventos__c/fields/Participante__c.field-meta.xml
<CustomField>
    <fullName>Participante__c</fullName>
    <label>Participante</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Adriano Pereira Mandarino</fullName>
            </value>
            <value>
                <fullName>Alan Serafini Betto</fullName>
                <isActive>false</isActive>
                <label>Alan Serafini Betto</label>
            </value>
            <value>
                <fullName>Alexandre Fameli Mammana</fullName>
            </value>
            <value>
                <fullName>Álex Theodoro Noll Drews</fullName>
            </value>
            <value>
                <fullName>Ana Luiza Martins Baraldi</fullName>
                <isActive>false</isActive>
                <label>Ana Luiza Martins Baraldi</label>
            </value>
            <value>
                <fullName>Ana Luíza Martins Baraldi</fullName>
            </value>
            <value>
                <fullName>Anderson Clayton Weissheimer</fullName>
            </value>
            <value>
                <fullName>Andre Aguilar</fullName>
            </value>
            <value>
                <fullName>Andre Luís Grolli</fullName>
                <isActive>false</isActive>
                <label>Andre Luís Grolli</label>
            </value>
            <value>
                <fullName>André Menegat</fullName>
            </value>
            <value>
                <fullName>Arquimedes Gonçalves De Moura</fullName>
            </value>
            <value>
                <fullName>Augusto Cesar Teodoro Rodrigues</fullName>
            </value>
            <value>
                <fullName>Augusto Gelain Rebeschini</fullName>
            </value>
            <value>
                <fullName>Bernardo Zanardo</fullName>
                <isActive>false</isActive>
                <label>Bernardo Zanardo</label>
            </value>
            <value>
                <fullName>Bruno De Moraes Ribeiro</fullName>
            </value>
            <value>
                <fullName>Bruno Fiorin Zaninetti</fullName>
            </value>
            <value>
                <fullName>Caio Munhoz Tormena</fullName>
            </value>
            <value>
                <fullName>Carlos Martinelli</fullName>
            </value>
            <value>
                <fullName>Cesar De Matos Silva</fullName>
                <isActive>false</isActive>
                <label>Cesar De Matos Silva</label>
            </value>
            <value>
                <fullName>Cezar Marchesan</fullName>
            </value>
            <value>
                <fullName>Christian Rodrigues</fullName>
            </value>
            <value>
                <fullName>Claudinei Capelle</fullName>
                <isActive>false</isActive>
                <label>Claudinei Capelle</label>
            </value>
            <value>
                <fullName>Clevison Junior da Silva Moraes</fullName>
            </value>
            <value>
                <fullName>Cristian Pirolli</fullName>
            </value>
            <value>
                <fullName>Daniel Miotto</fullName>
                <isActive>false</isActive>
                <label>Daniel Miotto</label>
            </value>
            <value>
                <fullName>Daniel Vidal</fullName>
            </value>
            <value>
                <fullName>Davi Genes Teixeira Lima</fullName>
            </value>
            <value>
                <fullName>Diego Batista Rocha</fullName>
            </value>
            <value>
                <fullName>Diego Francisco Gonçalves</fullName>
            </value>
            <value>
                <fullName>Douglas Capi Bento</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>