Salesforce/main/default/main/default/objects/CRM_Calendario_de_Eventos__c/fields/Produtividade__c.field-meta.xml
<CustomField>
    <fullName>Produtividade__c</fullName>
    <description>Produtividade em kg/ha</description>
    <inlineHelpText>Informar em kg/ha</inlineHelpText>
    <label>Produtividade</label>
    <summarizedField>CRM_Detalle_Calendario_de_eventos__c.Produtividade__c</summarizedField>
    <summaryForeignKey>CRM_Detalle_Calendario_de_eventos__c.CRM_Calendario_de_eventos__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>