Salesforce/main/default/main/default/objects/CRM_Calendario_de_Eventos__c/fields/Safra__c.field-meta.xml
<CustomField>
    <fullName>Safra__c</fullName>
    <label>Safra</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>11/12</fullName>
            </value>
            <value>
                <fullName>12/13</fullName>
            </value>
            <value>
                <fullName>17/18</fullName>
            </value>
            <value>
                <fullName>18/19</fullName>
            </value>
            <value>
                <fullName>19/20</fullName>
            </value>
            <value>
                <fullName>20/21</fullName>
            </value>
            <value>
                <fullName>21/22</fullName>
                <default>true</default>
                <label>21/22</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>