Salesforce/main/default/main/default/objects/CRM_Calendario_de_Eventos__c/fields/tieneItems__c.field-meta.xml
<CustomField>
    <fullName>tieneItems__c</fullName>
    <label>Cantidad de items</label>
    <summaryForeignKey>CRM_Detalle_Calendario_de_eventos__c.CRM_Calendario_de_eventos__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>