Salesforce/main/default/main/default/objects/CRM_Calendario_de_Eventos__c/fields/Tipo_Conta_Revenda__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Conta_Revenda__c</fullName>
    <label>Tipo Conta Revenda</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CPF</fullName>
            </value>
            <value>
                <fullName>CNPJ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>