Salesforce/main/default/main/default/objects/CRM_Calendario_de_Eventos__c/recordTypes/Dia_de_Campo.recordType-meta.xml
<RecordType>
    <fullName>Dia_de_Campo</fullName>
    <active>true</active>
    <description>Dia de Campo, DMMAS, Feiras y Tours de Max. Rend.</description>
    <label>Día de Campo</label>
</RecordType>