Salesforce/main/default/main/default/objects/CRM_Calendario_de_Eventos__c/recordTypes/Treinamento_Tecnico.recordType-meta.xml
<RecordType>
    <fullName>Treinamento_Tecnico</fullName>
    <active>true</active>
    <description>Palestra, Treinamento, Encontro y Jornada Tecnicas</description>
    <label>Treinamento Tecnico</label>
</RecordType>