Salesforce/main/default/main/default/objects/CRM_Calendario_de_Eventos__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Cuenta__c</columns>
    <columns>Evento__c</columns>
    <columns>Fase__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Municipio__c</columns>
    <columns>Realizado_por__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Safra__c</field>
        <operation>equals</operation>
        <value>20/21,21/22</value>
    </filters>
    <label>Todos</label>
</ListView>