Salesforce/main/default/main/default/objects/CRM_Calendario_de_Eventos__c/listViews/area_comerc.listView-meta.xml
<ListView>
    <fullName>area_comerc</fullName>
    <columns>NAME</columns>
    <columns>Nome_do_agricultor__c</columns>
    <columns>Municipio__c</columns>
    <columns>Estado__c</columns>
    <columns>Cuenta__c</columns>
    <columns>Data__c</columns>
    <columns>Marca__c</columns>
    <columns>Safra__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Evento__c</field>
        <operation>equals</operation>
        <value>Area comercial</value>
    </filters>
    <label>Area Comercial</label>
</ListView>