Salesforce/main/default/main/default/objects/CRM_Calendario_de_Eventos__c/listViews/cesb.listView-meta.xml
<ListView>
    <fullName>cesb</fullName>
    <columns>NAME</columns>
    <columns>Municipio__c</columns>
    <columns>Cuenta__c</columns>
    <columns>Data__c</columns>
    <columns>Marca__c</columns>
    <columns>Safra__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Evento__c</field>
        <operation>equals</operation>
        <value>CESB</value>
    </filters>
    <label>CESB</label>
</ListView>