Salesforce/main/default/main/default/objects/CRM_Calendario_de_Eventos__c/listViews/emplaca.listView-meta.xml
<ListView>
    <fullName>emplaca</fullName>
    <columns>NAME</columns>
    <columns>Nome_do_agricultor__c</columns>
    <columns>Municipio__c</columns>
    <columns>Data__c</columns>
    <columns>Marca__c</columns>
    <columns>Safra__c</columns>
    <columns>Fase__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Usar_coordenadas_da_Cidade__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Evento__c</field>
        <operation>equals</operation>
        <value>Emplacamento,Outdoor</value>
    </filters>
    <label>Emplacamento</label>
    <language>es</language>
</ListView>