Salesforce/main/default/main/default/objects/CRM_Calendario_de_Eventos__c/listViews/jornada.listView-meta.xml
<ListView>
    <fullName>jornada</fullName>
    <columns>NAME</columns>
    <columns>Municipio__c</columns>
    <columns>Cuenta__c</columns>
    <columns>Data__c</columns>
    <columns>Data_e_horario_inicio__c</columns>
    <columns>Data_e_horario_termino__c</columns>
    <columns>Marca__c</columns>
    <columns>Safra__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Evento__c</field>
        <operation>equals</operation>
        <value>Jornada Técnica</value>
    </filters>
    <label>Jornada Técnica</label>
</ListView>