Salesforce/main/default/main/default/objects/CRM_Calendario_de_Eventos__c/listViews/lado.listView-meta.xml
<ListView>
    <fullName>lado</fullName>
    <columns>NAME</columns>
    <columns>Nome_do_agricultor_2__c</columns>
    <columns>Nome_do_agricultor__c</columns>
    <columns>Municipio__c</columns>
    <columns>Estado__c</columns>
    <columns>Cuenta__c</columns>
    <columns>Data__c</columns>
    <columns>Marca__c</columns>
    <columns>Safra__c</columns>
    <columns>Fase__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Evento__c</field>
        <operation>equals</operation>
        <value>Lado a Lado</value>
    </filters>
    <filters>
        <field>Safra__c</field>
        <operation>equals</operation>
        <value>20/21,21/22</value>
    </filters>
    <label>Lado a Lado</label>
</ListView>