Salesforce/main/default/main/default/objects/CRM_Calendario_de_Eventos__c/listViews/treinamento.listView-meta.xml
<ListView>
    <fullName>treinamento</fullName>
    <columns>NAME</columns>
    <columns>Municipio__c</columns>
    <columns>Cuenta__c</columns>
    <columns>Data__c</columns>
    <columns>Data_e_horario_inicio__c</columns>
    <columns>Data_e_horario_termino__c</columns>
    <columns>Marca__c</columns>
    <columns>Safra__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Evento__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CRM_Calendario_de_Eventos__c.Treinamento_Tecnico</value>
    </filters>
    <label>Treinamento</label>
    <language>es</language>
</ListView>