Salesforce/main/default/main/default/objects/CRM_Calendario_de_Eventos__c/listViews/User_events.listView-meta.xml
<ListView>
    <fullName>User_events</fullName>
    <columns>NAME</columns>
    <columns>Cuenta__c</columns>
    <columns>Evento__c</columns>
    <columns>Fase__c</columns>
    <columns>Data_e_horario_inicio__c</columns>
    <columns>Municipio__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CRM_Calendario_de_Eventos__c.Dia_de_Campo,CRM_Calendario_de_Eventos__c.Emplacamento,CRM_Calendario_de_Eventos__c.Treinamento_Tecnico</value>
    </filters>
    <label>User events</label>
</ListView>